--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ header a {
 }
 
 .effects a:hover{ 
-    color: var(--lightskyblue);
+    color: var(--primary-color);
     font-weight: bold;
-    text-shadow: 0px 0px 20px var(--lightskyblue);
+    text-shadow: 0px 0px 20px var(--primary-color);
   }
