--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ header {
 }
 
 header h1 {
-    padding-left: 50px;
+    padding-left: 20px;
 }
 
 header nav ul {
@@ -40,4 +40,25 @@ header a {
     color: var(--primary-color);
     font-weight: bold;
     text-shadow: 0px 0px 20px var(--primary-color);
-  }
+}
+
+
+.background { 
+    background-color: var(--primary-color);
+    position: relative;
+    line-height: 1.5;
+    padding-left: 8px;
+    padding-right: 8px;
+    border-radius: 5%;
+    opacity: .8;
+}
+  
+.background.title { 
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+  
+.background.subtitle{
+    opacity: .95; 
+    font-size: 30px;
+}  
