--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ header {
 }
 
 header h1 {
-    padding-left: 20px;
+    padding: auto;
 }
 
 header nav ul {
@@ -42,6 +42,25 @@ header a {
     text-shadow: 0px 0px 20px var(--primary-color);
 }
 
+.hero {
+    height: 300px;
+    background-image: url("../images/nyc-night.jpg");
+    border-bottom-left-radius: 30px 30px;
+    border-bottom-right-radius: 30px 30px;
+    background-size: cover;
+    background-position:  100% 13%;
+    background-attachment: fixed;
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: flex-end;
+}
+
+.hero-subtitle {
+    padding-bottom: 15px;
+    padding-right: 15px;
+}
 
 .background { 
     background-color: var(--primary-color);
