--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,3 +81,37 @@ header a {
     opacity: .95; 
     font-size: 30px;
 }  
+
+.about-me-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    justify-content: center;
+    margin-top: 50px;
+  }
+  
+  
+.about-me-grid-container {
+    width: 80%;
+    display: grid;
+    gap: 10px 10px; 
+}
+  
+.about-me-item.about-me-title {
+    padding-top: 0px;
+    font-size: 32px;
+    grid-row: 1 / span 4;
+    padding-right: 10px;
+    text-align: right;
+    border-right: 2px solid coral;
+}
+  
+.about-me-item.goals {
+    padding-left: 15px;
+}
+  
+.about-me-item.info {
+    padding-left: 15px;
+    grid-column: 2;
+    grid-row: 3;
+}
